migrated xls import here from icemac.addressbook

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,23 @@
 [buildout]
-parts = test
+parts = test importchecker coverage
 develop = .
+extensions = mr.developer
+sources = sources
+sources-dir = ..
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = icemac.ab.importexport[test]
+eggs = icemac.ab.importxls[test]
+
+[importchecker]
+recipe = zc.recipe.egg
+eggs = importchecker
+arguments = "${buildout:directory}/src"
+
+[coverage]
+recipe = zc.recipe.egg
+eggs = tha.coverage
+
+[sources]
+icemac.addressbook = svn https://icemac.svn.sourceforge.net/svnroot/icemac/addressbook/branches/importer
+icemac.ab.importer = svn https://icemac.svn.sourceforge.net/svnroot/icemac/ab.importer/trunk
