- Updated development dependencies. - Updated package meta data.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-parts = test importchecker coverage
+parts = test console-scripts
 develop = .
 extensions = mr.developer
 sources = sources
@@ -9,14 +9,13 @@ sources-dir = ..
 recipe = zc.recipe.testrunner
 eggs = icemac.ab.importxls[test]
 
-[importchecker]
+[console-scripts]
 recipe = zc.recipe.egg
-eggs = importchecker
-arguments = "${buildout:directory}/src"
-
-[coverage]
-recipe = zc.recipe.egg
-eggs = tha.coverage
+eggs =
+     createcoverage
+     createzopecoverage
+     importchecker
+     pep8
 
 [sources]
 icemac.addressbook = svn https://icemac.svn.sourceforge.net/svnroot/icemac/addressbook/trunk
