Pin all versions.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,9 +1,14 @@
 [buildout]
+extends = https://bitbucket.org/icemac/icemac.addressbook/raw/tip/profiles/versions.cfg
 parts = test console-scripts
 develop = .
 extensions = mr.developer
 sources = sources
 sources-dir = ..
+versions = versions
+
+[versions]
+icemac.ab.importxls =
 
 [test]
 recipe = zc.recipe.testrunner
