--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,27 +1,29 @@
 [buildout]
 extends = https://bitbucket.org/icemac/icemac.addressbook/raw/tip/profiles/versions.cfg
-parts = test console-scripts
+parts = pytest
 develop = .
 extensions = mr.developer
 sources = sources
 sources-dir = ..
-versions = versions
 
 [versions]
 icemac.ab.importxls =
 
-[test]
-recipe = zc.recipe.testrunner
-eggs = icemac.ab.importxls[test]
-
-[console-scripts]
+[pytest]
 recipe = zc.recipe.egg
-eggs =
-     createcoverage
-     createzopecoverage
-     importchecker
-     pep8
+scripts = py.test=py.test
+test-eggs = icemac.ab.importxls[test]
+eggs = gocept.pytestlayer
+       pytest
+       pytest-cov
+       pytest-cache
+       pytest-remove-stale-bytecode
+       pytest-sugar
+       ${:test-eggs}
+
+[vcs]
+bb = hg ssh://hg@bitbucket.org/icemac
 
 [sources]
-icemac.addressbook = svn https://icemac.svn.sourceforge.net/svnroot/icemac/addressbook/trunk
-icemac.ab.importer = svn https://icemac.svn.sourceforge.net/svnroot/icemac/ab.importer/trunk
+icemac.addressbook = ${vcs:bb}/icemac.addressbook
+icemac.ab.importer = ${vcs:bb}/icemac.ab.importer
