Show picked versions

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,6 +5,8 @@ develop = .
 extensions = mr.developer
 sources = sources
 sources-dir = ..
+allow-picked-versions = true
+show-picked-versions = true
 
 [versions]
 icemac.ab.importxls =
