--- a/buildout.cfg
+++ b/buildout.cfg
@@ -19,6 +19,7 @@ eggs = gocept.pytestlayer
        pytest
        pytest-cov
        pytest-cache
+       pytest-flake8
        pytest-remove-stale-bytecode
        pytest-sugar
        ${:test-eggs}
