--- a/.hgignore
+++ b/.hgignore
@@ -2,11 +2,11 @@ syntax: glob
 
 *.egg-info
 *.pyc
-.cache
+.cache/
 .coverage
 .installed.cfg
 .mr.developer.cfg
-bin
-develop-eggs
-parts
+bin/
+develop-eggs/
 htmlcov/
+parts/
