Remove no longer needed dependency

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -15,7 +15,7 @@ icemac.ab.importxls =
 recipe = zc.recipe.egg
 scripts = py.test=py.test
 test-eggs = icemac.ab.importxls[test]
-eggs = gocept.pytestlayer
+eggs =
        pytest
        pytest-cache
        pytest-cov
