--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,7 +3,17 @@ image: python:2.7
 pipelines:
   default:
     - step:
+        caches:
+          - pip
+          - buildout-eggs
+          - buildout-parts
         script:
           - pip install setuptools==35.0.2 zc.buildout
           - buildout -n buildout:eggs-directory=../eggs
           - bin/py.test
+
+definitions:
+  caches:
+    buildout-eggs: ../eggs
+    buildout-parts: parts
+
