--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,7 +8,10 @@ pipelines:
           - buildout-eggs
           - buildout-parts
         script:
-          - pip install setuptools==35.0.2 zc.buildout
+          - curl https://bitbucket.org/icemac/icemac.addressbook/raw/tip/profiles/versions.cfg > versions.cfg
+          - pip install setuptools==`grep 'setuptools' versions.cfg | cut -d"=" -f2 | tr -d '[:blank:]'`
+          - pip install zc.buildout==`grep 'zc.buildout' versions.cfg | cut -d"=" -f2 | tr -d '[:blank:]'`
+          - pip install six==`grep 'six' versions.cfg | cut -d"=" -f2 | tr -d '[:blank:]'`
           - buildout -n buildout:eggs-directory=../eggs
           - bin/py.test
 
