--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: python
 python:
   - 2.7
 install:
-  - easy_install -U setuptools
-  - python bootstrap.py
-  - bin/buildout
+  - easy_install -U zc.buildout
+  - buildout
 script:
   - bin/test -v --all
