--- a/.hgignore
+++ b/.hgignore
@@ -3,6 +3,7 @@ syntax: glob
 *.egg-info
 *.pyc
 .DS_Store
+.Python
 .cache/
 .coverage
 .installed.cfg
@@ -11,4 +12,6 @@ syntax: glob
 bin/
 develop-eggs/
 htmlcov/
+include/
+lib/
 parts/
