Nest into git and TravisCI.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-extends = https://bitbucket.org/icemac/icemac.addressbook/raw/default/profiles/versions.cfg
+extends = https://raw.githubusercontent.com/icemac/icemac.addressbook/master/profiles/versions.cfg
 parts = pytest
 develop = .
 extensions = mr.developer
@@ -23,8 +23,8 @@ eggs =
        ${:test-eggs}
 
 [vcs]
-bb = hg ssh://hg@bitbucket.org/icemac
+gh = git https://github.com/icemac
 
 [sources]
-icemac.addressbook = ${vcs:bb}/icemac.addressbook
-icemac.ab.importer = ${vcs:bb}/icemac.ab.importer
+icemac.addressbook = ${vcs:gh}/icemac.addressbook
+icemac.ab.importer = ${vcs:gh}/icemac.ab.importer
