--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,4 @@
+version: ~> 1.0
 language: python
-python:
-  - 2.7
-install:
-  - easy_install -U zc.buildout
-  - buildout
-script:
-  - bin/test -v --all
+import:
+  - source: icemac/icemac.addressbook:.travis-blueprint.yml
