--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,6 @@
 include *.TXT
 include *.py
 include *.rst
-include pytest.ini
-include .coveragerc
 
 exclude *.cfg
 include buildout.cfg
@@ -12,11 +10,8 @@ exclude MANIFEST.in
 include *.yml
 exclude *.yml
 
-include .hgignore
-exclude .hgignore
-
-include .hgtags
-exclude .hgtags
+include .gitignore
+exclude .gitignore
 
 recursive-include src *.xls
 recursive-include src *.zcml
