Add support for Python 3.8. (#2)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,6 +7,9 @@ sources = sources
 sources-dir = ..
 allow-picked-versions = true
 show-picked-versions = true
+auto-checkout =
+    icemac.addressbook
+    icemac.ab.importer
 
 [versions]
 icemac.ab.importxls =
